edit working